fix flicker of template

--- a/public/styles/common.less
+++ b/public/styles/common.less
@@ -33,3 +33,7 @@ a, a:visited {
 p {
     line-height: 1.4em;
 }
+
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
